# simulating-risk

./: .justfile  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: unit_tests.yml
app/: app.py
app/sims/: hawkdove.py  risky_bet.py  risky_food.py
docs/: docs_head.html  index.html  simulatingrisk-0.1.0.dev0-py3-none-any.whl  site.webmanifest
docs/analysis/: index.html
docs/analysis/evolv/: index.html  overview.html  param-significance.html  population-category.html
docs/analysis/multi/: hawk-play-frequency.html  index.html  overview.html  payoff_significance.html  payoffs.html
docs/analysis/prev/: index.html
docs/app/: index.html
docs/app/assets/: ConnectedDataExplorerComponent-BRvAfDqF.js  DeferredRequestRegistry-EP9ZArpv.js  ImperativeModal-CcKbawj8.js  JsonOutput-BtH7MWeH.js  MarimoErrorOutput-AKU2x-PX.js  add-cell-with-ai-1yFy9J-5.js  add-connection-dialog-BJt2LgVC.js  agent-panel-OwFXhmfZ.js  any-language-editor-P346BfIE.js  architecture-7HQA4BMR-CvIUs8v0.js  architectureDiagram-VXUJARFQ-CvU0ejwI.js  blockDiagram-VD42YOAC-CfPdc_7X.js  button-DuHyjdW2.js  c4Diagram-YG6GDRKO-stixMtn0.js  cache-panel-BNAqGMTQ.js  capabilities-ClLgkhPb.js  cell-editor-8EjiUZ5N.js  cell-link-Dxr4AoiF.js  channel-IsKH6lfD.js  chat-display-YvTmJpcv.js  chat-panel-DqDibO5v.js  chat-ui-B7UP7-QV.js  chunk-55IACEB6-CETILDJP.js  chunk-5FQGJX7Z-D-AUn5sP.js  chunk-ATLVNIR6-Cedyo7eF.js  chunk-B4BG7PRW-DrPPIooI.js  chunk-DI55MBZ5-C7wiHAJK.js  chunk-EXTU4WIE-DLUjCgsB.js  chunk-JZLCHNYA-DcHgnnd0.js  chunk-N4CR4FBY-Bsr4106N.js  chunk-QN33PNHL-BILjBSpz.js  chunk-S3R3BYOJ-DNsewb75.js  chunk-TZMSLE5B-0McV3Q1h.js  code-block-37QAKDTI-Dx--dx4Y.js  command-Da-qul1Y.js  (+91 more)
docs/notebooks/: index.html
notebooks/: README.md  hawkdove_single_r_analysis.ipynb  hawkdove_variable_r_analysis.ipynb  hawkdovevar_population_risk_category.ipynb  risky_bet_batch_analysis.ipynb  riskybet_batch_analysis.ipynb  riskybet_simulation.ipynb  riskyfood_batch_analysis.ipynb  riskyfood_simulation.ipynb
notebooks/evolv/: convergence-population-category.py  convergence.py  overview.py  param-significance.py  parameter-significance.py  population-category.py
notebooks/hawkdove_single_r/: hawkdove_single_r_analysis.ipynb
notebooks/hawkdovemulti_adjust/: hawkdovemulti_agentrisktotals.ipynb  hawkdovemulti_polars.ipynb  hawkdovemulti_runlength.ipynb  hawkdovevar_population_risk_category.ipynb  hdm_analysis.ipynb  hdm_c7_hawkodds.ipynb  hdm_c7_riskdistribution.ipynb  hdm_riskadjust_runlength.ipynb
notebooks/hawkdovemulti_noadjust/: analyze_batchrun_data.ipynb  bootstrap_sample_stats.py
notebooks/multi/: hawk-play-frequency.py  overview.py  payoff_significance.py  payoffs.py  utils.py
notebooks/new_convergence/: hdm_c7_riskdistribution.ipynb  hdm_convergence_runlength.ipynb
notebooks/riskybet/: riskybet_batch_analysis.ipynb
notebooks/riskyfood/: riskyfood_batch_analysis.ipynb
requirements/: app.txt  dev.txt
risky_food/: README.md  model.py  run.py
simulatingrisk/: __init__.py  about_app.md  app.py  batch_run.py  doc_utils.py  ui_common.py  utils.py
simulatingrisk/charts/: histogram.js  histogram.py
simulatingrisk/hawkdove/: README.md  app.py  model.py  run.py  server.py  ui.py  viz.py
simulatingrisk/hawkdovemulti/: README.md  analysis_utils.py  app.py  batch_run.py  model.py  run_simulation.ipynb  simrisk_batch.slurm  ui.py  viz.py
simulatingrisk/hawkdovevar/: app.py  model.py
simulatingrisk/risky_bet/: HistogramModule.js  README.md  app.py  model.py  run.py  server.py
simulatingrisk/risky_food/: README.md  app.py  model.py  run.py  server.py
simulatingrisk/stag_hunt/: README.md  model.py  run.py
stag_hunt/: run.py
tests/: test_batch_run.py  test_hawkdove.py  test_hawkdovemulti.py  test_hawkdovemulti_batch_run.py  test_hawkdovevar.py  test_risky_bet.py  test_risky_food.py  test_utils.py
(+125 files in other folders)
