[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simulatingrisk"
description = "Agent-based modeling for simulations related to risk and rationality"
requires-python = ">=3.7"
license = {text = "Apache-2"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mesa==2.1.5",
    # "mesa @ git+https://github.com/projectmesa/mesa.git@main",
    "matplotlib",  # required by mesa
    "altair>5.0.1"
]
dynamic = ["version", "readme"]

[project.scripts]
simrisk-hawkdovemulti-batchrun = "simulatingrisk.hawkdovemulti.batch_run:main"

[tool.setuptools.dynamic]
version = {attr = "simulatingrisk.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["simulatingrisk"]
# exclude tests and notebooks

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov"]
analysis = ["jupyterlab", "polars", "hvplot", "pyarrow", "altair", "scipy", 
   "scikit-learn", "seaborn", "vegafusion[embed]>=1.5.0", "vl-convert-python", "great-tables"]

[tool.black]
line-length = 88
target-version = ['py38']
# include = ''
# extend-exclude = ''
