[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simulatingrisk"
description = "Agent-based modeling for simulations related to risk and rationality"
requires-python = ">=3.7"
license = {text = "Apache-2"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mesa==2.1.5",
    # "mesa @ git+https://github.com/projectmesa/mesa.git@main",
    "matplotlib",  # required by mesa
    "altair<6.0,>=5.5.0"  # 6.1 not compatible with mesa/solara version
]
dynamic = ["version", "readme"]

[project.scripts]
simrisk-hawkdovemulti-batchrun = "simulatingrisk.hawkdovemulti.batch_run:main"

[tool.setuptools.dynamic]
version = {attr = "simulatingrisk.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["simulatingrisk"]
# exclude tests and notebooks

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov"]
analysis = ["jupyterlab", "polars>1.41.2", "hvplot", "pyarrow", "scipy", 
   "scikit-learn", "seaborn", "vegafusion[embed]>=2.0.3", "vl-convert-python>=1.9.0", "great-tables"]

[tool.black]
line-length = 88
target-version = ['py38']
# include = ''
# extend-exclude = ''
