[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simulatingrisk"
description = "Agent-based modeling for simulations related to risk and rationality"
requires-python = ">=3.11"
license = {text = "Apache-2"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mesa==2.1.5",
    "altair>=6.0",
    "marimo>=0.23.11",
]
dynamic = ["version", "readme"]

[project.scripts]
simrisk-hawkdovemulti-batchrun = "simulatingrisk.hawkdovemulti.batch_run:main"

[tool.setuptools.dynamic]
version = {attr = "simulatingrisk.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["simulatingrisk"]
# exclude tests and notebooks

[dependency-groups]
test = ["pre-commit", "pytest", "pytest-cov"]
analysis = ["jupyterlab", "polars>1.41.2", "hvplot", "pyarrow", "scipy",
   "scikit-learn", "seaborn", "vegafusion[embed]>=2.0.3", "vl-convert-python>=1.9.0", "great-tables"]
dev = [
    "pre-commit",
    "ruff>=0.15.20",
    {include-group = "test"},
    {include-group = "analysis"},
]

[tool.black]
line-length = 88
target-version = ['py38']
# include = ''
# extend-exclude = ''

[tool.marimo.runtime]
pythonpath = ["."]
